<resources>
    <string name="app_name">My Dictionary!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="display_words">Display Words</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="binary_tree">Load Binary Tree</string>
    <string name="list_button">Load Linked List</string>
    <string name="hint_search">Word</string>
    <string name="search_word">Search For Word</string>
    <string name="contact">Word:</string>
    <string name="word_hint">Enter Word Here</string>
    <string name="part_of_speech">Part Of Speech: </string>
    <string name="definition">Definition: </string>
    <string name="definition_here">Enter Definition</string>
    <string name="save_word">Save Word</string>
    <string name="load_file">Select File</string>
    <string name="enter_sentence">Type in a Sentence Below</string>
    <string name="enter">Validate Sentence</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="sort_list">Sort the list</string>
    <string name="select_file">Select file</string>
    <string name="position">Word was found at position:</string>
    <string name="time_taken">Time taken:</string>
    <string name="invalid_words">Words not in Dictionary</string>
    <string name="done_validate">End Validation</string>
</resources>
