<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khalincheverria.mydictionary.AddWord">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="30dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/word"
    android:textSize="20sp"
    android:layout_marginRight="20dp"
    tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/word_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_hint"/>
</LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginBottom="30dp">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/part_of_speech"
           android:textSize="20sp"
           android:layout_marginRight="20dp"
           tools:ignore="RtlHardcoded" />
<Spinner
    android:id="@+id/part_of_speech"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:entries="@array/part_of_speech"
    />

   </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/definition"
                android:textSize="20sp"
                android:layout_marginRight="20dp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/word_definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/definition_here"/>

        </LinearLayout>
        <Button
            android:id="@+id/save_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/button_background"
            android:text="@string/save_word"/>
    </LinearLayout>

</ScrollView>
